# personal-git

./: readme.md
config-files/: readme.md
config-files/bash/: PS1-config  aliases-config  import-list-config  readme.md
config-files/i3/: config
health/: martial-artist-nutrition.md  readme.md
health/jiu-jitsu/: jiu-jitsu.md
ieee-template-makefile/: Makefile  generate-paper.sh  refs.bib  report.tex
jiu-jitsu/control-techniques/: collar-tie.md  control-techniques.md
jiu-jitsu/positions/: back-mount.md  full-guard.md  full-mount.md  half-guard.md  positions.md  side-control.md  turtle-position.md
jiu-jitsu/submissions/: submissions.md
jiu-jitsu/transitions/: transitions.md
latex-templates/homework-software-engineering/: main.tex
leetcode/: group-anagrams.cpp  readme.md
leetcode/hashmaps-and-arrays/: validanagram.cpp
leetcode/stack/: minStack.cpp  validParenthesis.cpp
messing-around/pylint-more-like-vim-mint/: my_test.py
opencv-test/: DisplayImage.cpp  readme.md
playing-around-directory/: readme.md
playing-around-directory/pylint-more-like-vim-mint/: main.py
playing-around-directory/rebasing-git-time/: gitignore1
programming-practice/: readme.md
programming-practice/creating-operator/: .clang-format  CMakeLists.txt  main.cpp  readme.md
programming-practice/data-structures/: readme.md
programming-practice/hashmaps-and-arrays/: group-anagrams.cpp  (+1 more)
scripts/: get-unique-emails.sh  git-config.sh  lowercase.sh  mini-bash-commands.md  pullAllRepos.sh
templates/opencv-cpp-project/: CMakeLists.txt  main.cpp
workshops/: open-source.md
(+58 files in other folders)
